
 * Fixed an error in configure.ac; --with-speex/flac work again (#1319)
 * Corrected problems in the Visual Studio project files
 * Updated po files from the Translation Project
 * Added new en_GB.po, eo.po, pl.po, sk.po and vi.po translation files
 * Added AC_USE_SYSTEM_EXTENSIONS to configure.ac; no more configure warnings
 * Corrected SUBLANG values in intl/localename.c (#1415)
 * Modify -v to -V on oggenc and oggdec for consistency (#1112)
 * Fix for utf8_decode in Windows; improves behavior in vorbiscomment (#268)
 * Updated gettextize to version 0.17
 * ogg123: backported fix from libfishsound to patch the Speex decoder (#1347)
 * ogg123: fixed CPU issue when outputting to a closed pipe (#1357)
 * ogg123: return value to stop decoding after buffer is shut down (#1357)
 * ogg123: support for ReplayGain; requires libvorbis 1.2.1 or later (#381)
 * ogg123: unset non-blocking mode on stderr
 * oggdec: gettextized help text (#1385)
 * oggdec: gettextized all strings
 * oggdec: call ov_open_callbacks instead of ov_open; it works on Windows now
 * oggenc: fixed a core dump while resampling from FLAC (#1316)
 * oggenc: fixed a typo in the Skeleton handling routine
 * oggenc: fixed remapping channels bug (#1326)
 * oggenc: support for WAVE_FORMAT_EXTENSIBLE headers (#1326)
 * oggenc: support for 32 bit Wave files (#1326)
 * oggenc: --ignorelength; support for Wave files > 4 GB (#1326)
 * oggenc: split help text into manageable chunks to help translators (#1385)
 * oggenc: --utf8 command similar to vorbiscomment's --raw (#268)
 * oggenc: fixed the encoding of extended characters in Windows (#268)
 * oggenc: validate raw UTF-8 sent to oggenc (#268)
 * oggenc: include the PID in the RNG seed to get a unique serial (#1432)
 * oggenc: lyrics support using .lrc as source; requires libkate (#1403)
 * ogginfo: support for information in Kate streams (#1360)
 * vcut: 64 bit fixes (#1366)
 * vcut: support for chained streams (#1455)